--- a/css/styles.css
+++ b/css/styles.css
@@ -11,21 +11,17 @@ body {
   background: #eee;
   height: 75px;
 }
-
-.page {
+.title {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 100%;
   height: 100%;
   font-family: "Roboto";
-  text-align: center;
-}
-
-.page.selected {
   background-color: royalblue;
+  text-align: center;
+  font-size: 25px;
 }
-
 .content {
   display: flex;
   background-color: lightblue;
