--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ body {
   padding: 0 5px;
 }
 
+.login > * {
+  padding: 0 5px;
+}
+
 .run > * {
   margin-left: 5px;
   margin-right: 5px;
@@ -84,10 +88,5 @@ body {
   }
   .controls > * {
     margin-bottom: 25px;
-  }
-}
-
-@media only screen and (max-height: 900px) {
-  body {
   }
 }
